--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -4,6 +4,7 @@ h1 {
   font-family: 'Roboto Slab', serif;
   font-weight:400px;
   font-size:40px;
+  color: purple;
 }
 
 body {
@@ -19,6 +20,7 @@ h3 {
   font-family: 'Titillium Web', serif;
 }
 
+
 nav {
   margin: 0 auto;
   width: 750px;
@@ -27,6 +29,7 @@ nav {
 nav li {
   display: inline-block;
   padding: 1em;
+  color: red;
 }
 
 p {
